@@ -1,3 +1,11 @@
+2023-08-05  G. Branden Robinson <g.branden.robinson@gmail.com>
+
+	[troff]: Trivially refactor.
+
+	* src/roff/troff/input.cpp (input_char_description): Migrate to
+	`const`-qualified object to size an array of length computed at
+	compile time and avoid repeating lengthy expression.
+
 2023-08-04  G. Branden Robinson <g.branden.robinson@gmail.com>
 
 	[tbl]: Fix staggering of text block cells.
